Add solutions for Module 1 home tasks

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "NodeJS Global Mentoring Program Hometasks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "task-1.1": "nodemon module-1/task-1",
+    "task-1.2": "nodemon module-1/task-2",
+    "build-task-1.1": "babel module-1/task-3/task-1 -d module-1/task-3/task-1/dist",
+    "babel-task-1.1": "npm run build-task-1.1 && nodemon module-1/task-3/task-1/dist",
+    "build-task-1.2": "babel module-1/task-3/task-2 -d module-1/task-3/task-2/dist",
+    "babel-task-1.2": "npm run build-task-1.2 && nodemon module-1/task-3/task-2/dist"
   },
   "repository": {
     "type": "git",
@@ -17,6 +22,12 @@
   },
   "homepage": "https://github.com/gldstn/nodejs-course#readme",
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
   }
 }
