--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "task-1.1": "nodemon module-1/task-1",
     "task-1.2": "nodemon module-1/task-2",
     "babel-task-1.1": "nodemon --exec babel-node module-1/task-3/task-1",
-    "babel-task-1.2": "nodemon --exec babel-node module-1/task-3/task-2"
+    "babel-task-1.2": "nodemon --exec babel-node module-1/task-3/task-2",
+    "eslint": "eslint --cache --ext .js,.ts module-2",
+    "prebuild": "rm -rf dist/*",
+    "build": "tsc && cp -rf package.json dist/package.json",
+    "prestart": "npm run build",
+    "start": "ts-node dist"
   },
   "repository": {
     "type": "git",
@@ -24,9 +29,22 @@
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
-    "nodemon": "^2.0.4"
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.7",
+    "@types/joi": "^14.3.4",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^4.0.2"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "express": "^4.17.1",
+    "joi": "^17.2.1",
+    "uuid": "^8.3.0"
   }
 }
