--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/joi": "^14.3.4",
+    "@types/sequelize": "^4.28.9",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
     "eslint-plugin-promise": "^4.2.1",
     "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^4.0.2"
   },
@@ -45,6 +48,9 @@
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "joi": "^17.2.1",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
     "uuid": "^8.3.0"
   }
 }
