--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('module-2/config', 'database.json'),
-  'models-path': path.resolve('module-2/data-access', 'models'),
-  'seeders-path': path.resolve('module-2/data-access', 'seeders'),
-  'migrations-path': path.resolve('module-2/data-access', 'migrations')
+  'config': path.resolve('module-2/core/config', 'database.json'),
+  'models-path': path.resolve('module-2/DAL', 'models'),
+  'seeders-path': path.resolve('module-2/DAL', 'seeders'),
+  'migrations-path': path.resolve('module-2/DAL', 'migrations')
 };
