--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "eslint": "eslint --cache --ext .js,.ts module-2",
     "prebuild": "rm -rf dist/*",
     "build": "tsc && cp -rf package.json dist/package.json",
-    "prestart": "npm run build",
-    "start": "ts-node dist"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -30,8 +29,10 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.7",
     "@types/joi": "^14.3.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/sequelize": "^4.28.9",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
@@ -45,10 +46,14 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
+    "helmet": "^4.1.1",
     "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
