--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint": "eslint --cache --ext .js,.ts module-2",
     "prebuild": "rm -rf dist/*",
     "build": "tsc && cp -rf package.json dist/package.json",
-    "start": "nodemon"
+    "start": "nodemon",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,17 +33,22 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.15",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/sequelize": "^4.28.9",
+    "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^6.2.0",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
     "ts-node": "^8.10.2",
     "typescript": "^4.0.2"
   },
